# clang-nop-plugin

./: .clang-format  CMakeLists.txt  README.md  cmake-command.sh
src/: CMakeLists.txt  NopPlugin.cpp
test/: clang-command.sh
